--- a/portfolio-web/package.json
+++ b/portfolio-web/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-web",
   "version": "0.1.0",
   "private": true,
-  "homepage": "/Portfolio",
+  "homepage": ".",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
